--- a/mobile_ac2/app/build.gradle
+++ b/mobile_ac2/app/build.gradle
@@ -3,12 +3,12 @@ plugins {
 }
 
 android {
-    namespace 'com.example.mobile_ac2'
+    namespace 'com.example.agenda'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.mobile_ac2"
-        minSdk 28
+        applicationId "com.example.agenda"
+        minSdk 24
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -29,14 +29,13 @@ android {
 }
 
 dependencies {
-
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
 }
