--- a/mobile_ac2/app/src/main/AndroidManifest.xml
+++ b/mobile_ac2/app/src/main/AndroidManifest.xml
@@ -11,16 +11,13 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Mobile_ac2"
+        android:theme="@style/Theme.Agenda"
         tools:targetApi="31">
         <activity
-            android:name=".CadAgendaActivity"
+            android:name=".activity.AgendaActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.AcivityListaAgenda"
-            android:exported="false" />
-        <activity
-            android:name=".activity.ActivityCadResumoCurso"
+            android:name=".activity.EditResumActivity"
             android:exported="false" />
         <activity
             android:name=".activity.MainActivity"
