--- a/mobile_ac2/settings.gradle
+++ b/mobile_ac2/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "mobile_ac2"
+rootProject.name = "agenda"
 include ':app'
